--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wazwork",
   "version": "0.1.0",
-  "homepage": "https://eslamicoo912.github.io/WAZWORK/",
+  "homepage": "https://mostafakadry.github.io/WazWork",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
